<resources>
    <string name="app_name">MC PC</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="motherboards">Материнские платы</string>
    <string name="motherboard">Материнская плата</string>
    <string name="gpus">Видеокарты</string>
    <string name="gpu">Видеокарта</string>
    <string name="process">Процессоры</string>
    <string name="proces">Процессор</string>
    <string name="ram">Оперативная память</string>
    <string name="bps">Блоки питания</string>
    <string name="bp">Блок питания</string>
    <string name="CPUCOOLER">Кулер для процессора</string>
    <string name="CPUCOOLERS">Кулеры для процессора</string>
    <string name="cooler">Вентиляторы</string>
    <string name="hdd">Жесткие диски</string>
    <string name="ssd">SSD накопители</string>
    <string name="M2">M.2 накопители</string>
    <string name="bodies">Корпуса</string>
    <string name="body">Корпус</string>


</resources>
