<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Catalog_Activity">

    <Button
        android:id="@+id/buttonbody"
        android:layout_width="340dp"
        android:layout_height="47dp"
        android:layout_marginBottom="108dp"
        android:text="@string/bodies"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.507"
        app:layout_constraintStart_toStartOf="parent" />

    <ImageButton
        android:id="@+id/back"
        style="@style/Widget.AppCompat.Button.Borderless"
        android:layout_width="52dp"
        android:layout_height="48dp"
        android:onClick="onClick"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.02"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0"
        app:srcCompat="@android:drawable/ic_menu_revert" />

    <Button
        android:id="@+id/motherboardbutton"
        android:layout_width="340dp"
        android:layout_height="47dp"
        android:onClick="onClickMotherBoard"
        android:text="@string/motherboard"
        app:layout_constraintBottom_toTopOf="@+id/cpubutton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.507"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0" />

    <Button
        android:id="@+id/cpubutton"
        android:layout_width="340dp"
        android:layout_height="47dp"
        android:text="@string/proces"
        app:layout_constraintBottom_toTopOf="@+id/buttonCPUcooler"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/buttonCPUcooler"
        android:layout_width="340dp"
        android:layout_height="47dp"
        android:text="@string/CPUCOOLERS"
        app:layout_constraintBottom_toTopOf="@+id/buttongpu"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/buttongpu"
        android:layout_width="340dp"
        android:layout_height="47dp"
        android:text="@string/gpu"
        app:layout_constraintBottom_toTopOf="@+id/butttonram"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/butttonram"
        android:layout_width="340dp"
        android:layout_height="47dp"
        android:text="@string/ram"
        app:layout_constraintBottom_toTopOf="@+id/hdd"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/hdd"
        android:layout_width="340dp"
        android:layout_height="47dp"
        android:text="@string/hdd"
        app:layout_constraintBottom_toTopOf="@+id/buttonssd"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/buttoncooler"
        android:layout_width="340dp"
        android:layout_height="47dp"
        android:text="@string/cooler"
        app:layout_constraintBottom_toTopOf="@+id/buttonbp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/buttonbp"
        android:layout_width="340dp"
        android:layout_height="47dp"
        android:text="@string/bp"
        app:layout_constraintBottom_toTopOf="@+id/buttonbody"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/buttonssd"
        android:layout_width="340dp"
        android:layout_height="47dp"
        android:text="@string/ssd"
        app:layout_constraintBottom_toTopOf="@+id/buttonM2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/buttonM2"
        android:layout_width="340dp"
        android:layout_height="47dp"
        android:text="@string/M2"
        app:layout_constraintBottom_toTopOf="@+id/buttoncooler"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>